feat: new version project with docker-compose, credential safe for database, improve description projetc